# dstvparser

./: .gitignore  README.md  dxf_exporter.py  group_files.py  interactive_plotting.py  isolate_skew_cuts.py  plotting_faces.py  pyproject.toml  requirements.txt  run_example.py
DSTVParser/: __init__.py
DSTVParser/exporters/: compose_profile_faces.py  interactive_plotter.py  profile_dxf_exporter.py  profile_plotter.py
DSTVParser/parsers/: dstv_file_parser.py  factory.py  nc1_file_parser.py  nc_file_parser.py
DSTVParser/utils/: drawers.py  profile_schemas.py
Examples/: UPN.nc  issue#1.nc1
dstvparser/: __init__.py
dstvparser/models/: nc_part.py
dstvparser/parsers/: nc_file_parser.py
dstvparser/utils/: faces_name_schemas.py
examples/: inspect_factory.py  inspect_nc1_file.py  inspect_nc_file.py
examples/data/: 2501.nc1  516_AK_test_UPN 200.nc_N°8 pz.nc  722.nc
temp_parser_folder/parsers/: dstv_file_parser.py  factory.py
temp_parser_folder/utils/: utilities.py
test/: test_DXF_export.py  test_Facroty.py  test_NC1FileParser.py  test_NCFileParser.py  test_plotting_faces.py
